css/style.css
/*
green: #12e4a6
blue: #00b4f6
dark grey: #2e3233
light grey: #d4e1e6
near black: #060b0d
*/

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 10px;
}

body {
	font-family: "Roboto Mono", monospace;
	font-weight: 300; 
	line-height: 1.5;
	color: #060b0d;
	padding: 2.4rem;
}

.header {
	height: 95vh;
	background-image: linear-gradient(to bottom right, 
									  rgba(0, 0, 0, 1),
									  rgba(255, 255, 255, .5)), 
								      url(../img/warp.jpg);
	background-size: cover;
	background-position: top;
	position: relative;
	animation: fadeInHeader 1s ease-in-out;
}

@keyframes fadeInHeader {
  0% {
	opacity: 0;
    clip-path: polygon(50% 0, 50% 0, 50% 100%, 50% 100%);
  }
  100% {
  	opacity: 1;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
}

.logo-box {
	position: absolute;
	top: 2rem;
	left: 1.6rem;
	animation: fadeIn 1s ease-in 1s;
	animation-fill-mode: backwards;
}

@keyframes fadeIn {
	0% { opacity: 0; }

	100% { opacity: 1; }
}

#logo {
	height: 8rem;
}

.text-box {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	text-align: center; 
}

.header-primary {
	color: #d4e1e6;
	backface-visibility: hidden;
	margin: 2rem;
}

.header-primary-main {
	display: block;
	font-family: Roboto, sans-serif;
	font-size: 6rem;
	font-weight: 400; 
	letter-spacing: 2rem;
	animation: fadeInMain .5s;
}

@keyframes fadeInMain {
	0% {
		opacity: 0;
		transform: translate(0, -100vh);
	}
	
	50% { transform: translate(0, -100vh); }
	
	100% {
		opacity: 1;
	}
}

.header-primary-sub {
	display: block;
	font-size: 1.2rem;
	font-weight: 300;
	letter-spacing: .37rem;
	animation: fadeIn .75s .75s;
	animation-fill-mode: backwards;
	text-align: left;
}

.btn:link,
.btn:visited {
	font-family: Roboto, sans-serif;
	font-weight: 700;
	font-size: 1.6rem;
	text-decoration: none;
	padding: 1.5rem 4rem;
	display: inline-block;
	border-radius: .2rem;
	transition: all .2s;
	animation: fadeIn 1s ease-in 1s;
	animation-fill-mode: backwards;
	position: relative;
}

.btn:hover {
	transform: translateY(-2px);
	box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
}

.btn:active {
	transform: translateY(-1px);
	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
}

.btn-green {
	background-color: #12e4a6;
	color: #060b0d;
}

.btn::after {
	content: "";
	display: inline-block;
	height: 100%;
	width: 100%;
	border-radius: .2rem;
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	transition: all .1s;
}

.btn-green::after {
	background-color: #12e4a6;
}

.btn:hover::after {
	transform: scale(1.1, 1.4);
	opacity: 0;
}

